⭐feat: 搜索区logo及搜索框

--- a/src/components/header/index.less
+++ b/src/components/header/index.less
@@ -1,13 +1,10 @@
 #nav-header {
   background-color: #eee;
   padding: 10px 50px;
-  // min-width: 1000px;
-  
+  min-width: 800px;
   color: #666;
-  .wrapper {
-display: flex;
+  display: flex;
   justify-content: space-between;
-  }
 
   .header-item {
     cursor: pointer;
