--- a/src/style/common.css
+++ b/src/style/common.css
@@ -21,7 +21,7 @@ div {
 	box-sizing: border-box;
 }
 .wrapper {
-	/* width: calc(100vw - 100px); */
-	min-width: 800px;
+	width: calc(100% - 100px);
 	margin: 0 auto;
+	margin-top: 20px;
 }
